# text-to-diagram

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  annotated.json  custom.json  diagrammer.py  labeled.json  loop.json  mcp_server.py  mlp.json  pyproject.toml  steps.md  test1.py  test2.py  test3.py  test4.py  test_registry.py  transformer.json
.claude-plugin/: marketplace.json
.github/workflows/: test.yml
docs/: linkedin-launch.md
examples/: db.json  defs.json  grouped.json  inference.json  launch.json  mlp_loose.json  mlp_tb.json  mlp_tight.json  note.json  ortho.json  ortho_lr.json  styled.json  system.json
plugins/diagrammer/.claude-plugin/: plugin.json
plugins/diagrammer/skills/diagrammer/: SKILL.md
scratch/: test1.py  test2.py  test3.py  test4.py
skill/: SKILL.md
src/diagrammer/: __init__.py  __main__.py  mcp_server.py  prompt.md
src/diagrammer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_snapshots.py
