[project]
name = "diagrammer"
version = "0.1.0"
description = "Turn a JSON spec into a clean blueprint-style SVG diagram."
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [{name = "Anish Reddy"}]

[project.scripts]
diagrammer = "diagrammer:cli"

[project.optional-dependencies]
mcp = ["mcp"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
diagrammer = ["prompt.md"]
